--- a/langswarm/mcp/tools/message_queue_publisher/workflows.yaml
+++ b/langswarm/mcp/tools/message_queue_publisher/workflows.yaml
@@ -1,208 +1,110 @@
 workflows:
-  # Main workflow for comprehensive message queue operations
-  use_message_queue_tool:
-    - steps:
-      - agent: input_normalizer
-        input: "${user_input}"
-        output:
-          to: action_classifier
-      
-      - agent: action_classifier
-        input: "${previous_output}"
-        output:
-          to: message_preparer
-      
-      - agent: message_preparer
-        input: |
-          Action: ${previous_output.action}
-          Original input: ${input_normalizer.output}
-        output:
-          to: parameter_builder
-      
-      - agent: parameter_builder
-        input: |
-          Action: ${action_classifier.output.action}
-          Prepared message: ${previous_output}
-          Original request: ${input_normalizer.output}
-        output:
-          to: tool
-      
-      - tool: message_queue_publisher
-        input: |
-          {
-            "method": "${action_classifier.output.action}",
-            "params": ${parameter_builder.output}
-          }
-        output:
-          to: response_formatter
-      
-      - agent: response_formatter
-        input: |
-          Tool result: ${previous_output}
-          Original action: ${action_classifier.output.action}
-        output:
-          to: user
+  main_workflow:
+    - id: use_message_queue_tool
+      description: "Universal workflow for all message queue publishing operations"
+      inputs:
+        - user_input
+        - user_query
+      steps:
+        - id: normalize_input
+          agent: input_normalizer
+          input: |
+            user_input: ${user_input}
+            user_query: ${user_query}
+          output:
+            to: classify_publish_intent
 
-  # Direct message publishing workflow (faster for known operations)
-  direct_publish_workflow:
-    - steps:
-      - agent: message_preparer
-        input: "${user_input}"
-        output:
-          to: tool
-      
-      - tool: message_queue_publisher
-        input: |
-          {
-            "method": "publish_message",
-            "params": ${previous_output.structured_message}
-          }
-        output:
-          to: response_formatter
-      
-      - agent: response_formatter
-        input: "${previous_output}"
-        output:
-          to: user
+        - id: classify_publish_intent
+          agent: message_intent_classifier
+          input: |
+            User request: ${context.step_outputs.normalize_input}
+            
+            Classify this message queue request as one of:
+            - publish_message: Send a message to a queue
+            - publish_batch: Send multiple messages at once
+            - schedule_message: Schedule a message for future delivery
+            - broadcast_message: Send message to multiple queues/topics
+            - configure_queue: Set up or modify queue configuration
+            - queue_status: Check queue status and health
+            
+            Return the classification and specific parameters.
+          output:
+            to: extract_message_details
 
-  # Channel management workflow
-  channel_management_workflow:
-    - steps:
-      - agent: action_classifier
-        input: "${user_input}"
-        output:
-          to: tool
-      
-      - tool: message_queue_publisher
-        input: |
-          {
-            "method": "${previous_output.action}",
-            "params": {}
-          }
-        output:
-          to: response_formatter
-      
-      - agent: response_formatter
-        input: "${previous_output}"
-        output:
-          to: user
+        - id: extract_message_details
+          agent: message_extractor
+          input: |
+            Operation: ${context.step_outputs.classify_publish_intent}
+            User request: ${context.step_outputs.normalize_input}
+            
+            Extract message publishing details.
+          output:
+            to: validate_message_format
 
-  # Error handling workflow
-  error_handling_workflow:
-    - steps:
-      - agent: input_normalizer
-        input: "${user_input}"
-        output:
-          to: error_handler
-        on_error:
-          to: error_handler
-      
-      - agent: error_handler
-        input: |
-          Error context: ${error_context}
-          Original input: ${user_input}
-          Failed step: ${failed_step}
-        output:
-          to: user
+        - id: validate_message_format
+          agent: message_validator
+          input: |
+            Operation: ${context.step_outputs.classify_publish_intent.type}
+            Message details: ${context.step_outputs.extract_message_details}
+            
+            Validate the message format and publishing parameters.
+          output:
+            to:
+              - condition:
+                  if: "${context.step_outputs.validate_message_format.valid} == true"
+                  then: build_publish_request
+                  else: request_message_correction
 
-  # Batch message publishing workflow
-  batch_publish_workflow:
-    - steps:
-      - agent: input_normalizer
-        input: "${user_input}"
-        output:
-          to: message_preparer
-      
-      - agent: message_preparer
-        input: |
-          Batch operation: ${previous_output}
-          Expected format: Array of messages to publish
-        output:
-          to: parameter_builder
-      
-      - agent: parameter_builder
-        input: |
-          Batch messages: ${previous_output}
-          Create multiple publish_message calls
-        output:
-          to: tool
-      
-      - tool: message_queue_publisher
-        input: "${previous_output}"
-        output:
-          to: response_formatter
-        loop: true  # Process each message in batch
-      
-      - agent: response_formatter
-        input: |
-          Batch results: ${previous_output}
-          Format as summary of all operations
-        output:
-          to: user
+        - id: request_message_correction
+          agent: message_correction_agent
+          input: |
+            Validation errors: ${context.step_outputs.validate_message_format.errors}
+            Original request: ${context.step_outputs.normalize_input}
+            
+            Request corrections for message format or parameters.
+          output:
+            to: user
 
-# Workflow routing based on intent
-workflow_routes:
-  # Route based on detected action
-  publish_message: "direct_publish_workflow"
-  list_channels: "channel_management_workflow" 
-  get_broker_stats: "channel_management_workflow"
-  
-  # Route based on input complexity
-  simple_publish: "direct_publish_workflow"
-  complex_publish: "use_message_queue_tool"
-  batch_operations: "batch_publish_workflow"
-  
-  # Route based on error conditions
-  error_recovery: "error_handling_workflow"
+        - id: build_publish_request
+          agent: queue_request_builder
+          input: |
+            Operation: ${context.step_outputs.classify_publish_intent.type}
+            Validated params: ${context.step_outputs.validate_message_format}
+            
+            Build the message queue publishing request.
+          output:
+            to: execute_publish_operation
 
-# Intent detection patterns
-intent_patterns:
-  publish_message:
-    keywords: ["send", "publish", "post", "queue", "message", "notify", "dispatch"]
-    phrases: [
-      "send message to",
-      "publish to queue", 
-      "notify via channel",
-      "dispatch task to",
-      "queue message for"
-    ]
-    
-  list_channels:
-    keywords: ["list", "show", "channels", "queues", "available"]
-    phrases: [
-      "list channels",
-      "show queues",
-      "available channels",
-      "what channels exist"
-    ]
-    
-  get_broker_stats:
-    keywords: ["stats", "statistics", "status", "health", "broker", "info"]
-    phrases: [
-      "broker status",
-      "queue statistics", 
-      "system health",
-      "broker info"
-    ]
+        - id: execute_publish_operation
+          function: langswarm.core.utils.workflows.functions.mcp_call
+          args:
+            mcp_url: "local://message_queue_publisher"
+            payload: ${context.step_outputs.build_publish_request}
+          output:
+            to:
+              - condition:
+                  if: "${context.step_outputs.execute_publish_operation.success} == true"
+                  then: format_publish_response
+                  else: handle_publish_error
 
-# Example usage patterns for different message types
-usage_examples:
-  task_notification:
-    input: "Send a task completion notification to the workers queue"
-    workflow: "use_message_queue_tool"
-    expected_output: "Task notification sent to workers channel"
-    
-  system_alert:
-    input: "Publish an error alert: Database connection failed"
-    workflow: "direct_publish_workflow"
-    expected_output: "Alert published to system monitoring"
-    
-  agent_communication:
-    input: "Send workflow results to the analysis-agent channel"
-    workflow: "use_message_queue_tool"
-    expected_output: "Results forwarded to analysis-agent"
-    
-  batch_notifications:
-    input: "Send completion notifications for tasks: [task1, task2, task3]"
-    workflow: "batch_publish_workflow"
-    expected_output: "Batch notifications sent successfully"
+        - id: format_publish_response
+          agent: publish_response_formatter
+          input: |
+            Operation: ${context.step_outputs.classify_publish_intent.type}
+            Publish result: ${context.step_outputs.execute_publish_operation}
+            Original request: ${context.step_outputs.normalize_input}
+            
+            Format the publishing response.
+          output:
+            to: user
+
+        - id: handle_publish_error
+          agent: publish_error_handler
+          input: |
+            Error details: ${context.step_outputs.execute_publish_operation}
+            Operation attempted: ${context.step_outputs.classify_publish_intent.type}
+            User request: ${context.step_outputs.normalize_input}
+            
+            Provide helpful error guidance and suggest alternatives.
+          output:
+            to: user
